--- a/vignettes/Building_Specification_Readers.Rmd
+++ b/vignettes/Building_Specification_Readers.Rmd
@@ -22,13 +22,13 @@ library(stringr)
 library(gt)
 ```
 
-The first thing to do when trying to build a specification reader is to try the default. By default metacore can read in specification that are in the pinnacle 21 format. If your document isn't that format it is still worth trying the default cause the error messages can be helpful.
+The first thing to do when trying to build a specification reader is to try the default. By default metacore can read in specification that are in the Pinnacle 21 specification format. If your document isn't in that format, it is still worth trying the default readers, as the error messages can be helpful.
 
 ```{r, error=TRUE}
 spec_to_metacore(metacore_example("mock_spec.xlsx"))
 ```
 
-As we can see, the mock spec we are using here doesn't match the format. So, we will have to build bespoke reader. Before we start that, it is important to understand the structure of the metacore object. Each object acts as its own database for all dataset related metadata. It has 7 tables, 6 inputted tables and 1 change log. The 6 tables and there general purpose are as follows:
+As we can see, the mock spec we are using here doesn't match the format. Therefore we will have to build bespoke reader. Before we start, it is important to understand the structure of the metacore object. Each object acts as its own database for all dataset related metadata. The object has 7 tables, 6 tables holding metadata and 1 change log. The 6 tables and their general purpose are as follows:
 
 -   **ds_sep**: Contains dataset level information
 
@@ -46,11 +46,11 @@ Here is a schema of how all this fits together
 
 ![](../man/figures/labeled-schema.png "Metacore Schema")
 
-ds_spec is connect to ds_vars by the 'dataset' variable and ds_vars is connected to var_spec by the 'variable' variable etc. For more information on the make-up of metacore objects please see the readme. 
+ds_spec is connected to ds_vars by the 'dataset' variable and ds_vars is connected to var_spec by the 'variable' variable, etc. For more information on the make-up of metacore objects please see the README. 
 
-Now we understand what makes a metacore object we can start to develop the reader.
+Now that we understand what makes a metacore object, we can start to develop the reader.
 
-First, we need to dentify what type of specification format you have. At the moment we support the specification where each tab contains different information i.e. a domain tab, a variable tab etc. To test this you can use the `spec_type` function.
+First, we need to identify what type of specification format you have. At the moment we support a specification where each tab contains information relevant to a different table, such as a domain tab, a variable tab, etc. To test this you can use the `spec_type` function.
 
 ```{r}
 metacore:::spec_type(metacore_example("mock_spec.xlsx"))
@@ -58,7 +58,7 @@ metacore:::spec_type(metacore_example("mock_spec.xlsx"))
 
 Given we have the type style of specification, we can attempt to run with the lower level built-in specification to metacore build. There are 6 lower level specification builders to match each of the 6 datasets needed, spec_type_to\_\*. Even if these fail, the error messages should help identify the issues.
 
-But, before we to any of that we need to read in our document using the `read_all_sheets` function. This function reads in a multisheet excel file into a named list, where the name of each dataset is the name of the tab. The lower level specification builders do assume the provided `doc` is a named list. This mock specification has 5 tabs, domain, variables, value level metadata, controlled terms, and computational method. So it looks like we might need to split the information in these tabs to get the 6 tables needed for the metacore object.
+But, before we start any of that, we need to read in our document using the `read_all_sheets` function. This function reads in a multisheet excel file into a named list, where the name of each dataset is the name of the tab. The lower level specification builders do assume the provided `doc` is a named list. This mock specification has 5 tabs, domain, variables, value level metadata, controlled terms, and computational method. So it looks like we might need to split the information in these tabs to get the 6 tables needed for the metacore object.
 
 ```{r}
 doc <- read_all_sheets(metacore_example("mock_spec.xlsx"))
@@ -66,7 +66,7 @@ doc %>% map(head)
 
 ```
 
-Let's start with making the ds_spec (dataset specification) table using `spec_type_to_ds_spec`. The ds_spec table is made of 3 columns, the dataset name, the dataset structure, and the dataset label. If we look at our specification document, it looks like all this information is in the Domains tab. Now we know what we need we can start building the table by trying the `spec_type_to_ds_spec` function.
+Let's start with making the ds_spec (dataset specification) table using `spec_type_to_ds_spec`. The ds_spec table is made of 3 columns: the dataset name, the dataset structure, and the dataset label. If we look at our specification document, it looks like all this information is in the Domains tab. Now we know what we need we can start building the table by trying the `spec_type_to_ds_spec` function.
 
 This function takes in our named list of datasets (doc), a named vector of columns (cols) and a sheet name (sheet). But, only doc is needed, the other inputs have defaults. So we can try with just the default and see what we get.
 
@@ -82,7 +82,7 @@ doc$Domains %>% names()
 
 If we look at the default input for cols, `"label" = "[L|l]abel|[D|d]escription"`, we can see the label is matching to the `Label` and the `Description` columns .
 
-We only need the Domain `Name`, `Label`, and `Data Structure` columns. So we can rewrite the regular expressions to be more specific.
+We only need the Domain `Name`, `Label`, and `Data Structure` columns. So we can update the expressions to be more specific.
 
 ```{r}
 ds_spec <- spec_type_to_ds_spec(doc, 
@@ -92,7 +92,7 @@ ds_spec <- spec_type_to_ds_spec(doc,
 head(ds_spec)
 ```
 
-Regular expressions are used to match the columns, so if you needed a more flexible input you could do that. Now, we have the ds_spec table we can move on to the ds_vars table.
+Regular expressions are used to match the columns, so if you needed a more flexible input, you could do that. Now, we have the ds_spec table we can move on to the ds_vars table.
 
 The ds_vars table has 5 columns:
 
@@ -108,7 +108,7 @@ The ds_vars table has 5 columns:
 
 -   core: ADaM core (Expected, Required, Permissible)
 
-When we look back at our specification document we can see all this information is in the variable tab. The inputs for the `spec_type_to_ds_vars` function are the same as before, but with slightly different defaults. By default ds_vars only checks sheets labelled "Variable" (this is because all the settings are defaulted to read in p21 formatted specs). But, those default work for our specifications cause all the information is in the variable tab; so we can try with just the defaults again .
+When we look back at our specification document we can see all this information is in the variable tab. The inputs for the `spec_type_to_ds_vars` function are the same as before, but with slightly different defaults. By default ds_vars only checks sheets labeled "Variable" (this is because all the settings are defaulted to read in P21 formatted specs). But, those default work for our specifications cause all the information is in the variable tab; so we can try with just the defaults again .
 
 ```{r, error=TRUE}
 spec_type_to_ds_vars(doc)
@@ -129,7 +129,7 @@ ds_vars<- spec_type_to_ds_vars(doc, cols = c("dataset" = "Domain",
 head(ds_vars)
 ```
 
-The next table we have is var_spec, the table of variable level metadata. var_spec is seperate from ds_vars because, in accordance with CDISC standards, labels and lengths should be the same for a given variable across all datasets. So, we are able to normalize the data to only have one row per variable, which ensures this rule and helps reduce the size of the object. There are 6 columns in var_spec:
+The next table we have is var_spec, the table of variable level metadata. var_spec is separate from ds_vars because, in accordance with CDISC standards, labels and lengths should be the same for a given variable across all datasets. So, we are able to normalize the data to only have one row per variable, which ensures this rule and helps reduce the size of the object. There are 6 columns in var_spec:
 
 -   variable: variable name
 
@@ -143,7 +143,7 @@ The next table we have is var_spec, the table of variable level metadata. var_sp
 
 -   common: boolean if variable is common across ADaM
 
-Looking back at our specification we see this will also be built using the Variable tab. So, we know we need to edit the regular expression fro variable to make it more specific. Additionally, if you look at the default for `cols` you see there is a dataset input. This is because some standards aren't 100% consistent, some variables (e.g. visit) have different lengths depending on the dataset. **So to accommodate this some of the variables in var_spec are in the ds.variable format**. These builders will do this conversion for you , but dataset is needed. The other thing the builders can automatically deal with is the common variable. If given a dataset column, the builder function will automatically figure out which variables are common to all dataset. This is good because we don't have a common variable in our specs.
+Looking back at our specification we see this will also be built using the Variable tab. So, we know we need to edit the regular expression for the variable to make it more specific. Additionally, if you look at the default for `cols` you see there is a dataset input. This is because some standards aren't 100% consistent, some variables (e.g. visit) have different lengths depending on the dataset. **So to accommodate this some of the variables in var_spec are in the ds.variable format**. These builders will do this conversion for you , but the dataset is needed. The other thing the builders can automatically deal with is the common variable. If given a dataset column, the builder function will automatically figure out which variables are common to all dataset. This is good because we don't have a common variable in our specs.
 
 ```{r}
 var_spec <- spec_type_to_var_spec(doc, cols = c("variable" = "Variable Name",
@@ -155,7 +155,7 @@ var_spec <- spec_type_to_var_spec(doc, cols = c("variable" = "Variable Name",
 head(var_spec)
 ```
 
-There is one issue here, the format column also the codelist names. This is cause the information came from the "Controlled Term or Format" column of my spec document. So the final step of preparing var_spec table is to remove the control terms. It is easy here cause all the formats end in a full stop (.), but the control terms don't.
+There is one issue here: the format column is also the codelist names. This is because the information came from the "Controlled Term or Format" column of my spec document. So the final step of preparing var_spec table is to remove the controlled terms. It is easy here because all the formats end in a full stop (.), but the controlled terms don't.
 
 ```{r}
 var_spec <- var_spec %>% 
@@ -178,7 +178,7 @@ The next dataset is value_spec, which contains the value level metadata. It is m
 
 -   derivation_id: id used to cross-reference the derivation
 
-By default, `spec_type_to_value_spec` is set up to have the where information on different sheet because that is the format of a P21 spec, but in our spec we don't have that. In fact, we don't have any value level metadata in our spec. But, that is fine, the default builders will just pull what information it can from the variable tab.
+By default, `spec_type_to_value_spec` is set up to have the where information on different sheet because that is the format of a P21 spec, but in our spec we don't have that. In fact, we don't have any value level metadata in our spec. But, that is fine - the default builders will just pull what information it can from the variable tab.
 
 ```{r}
 value_spec <- spec_type_to_value_spec(doc, cols = c("dataset" = "VLM Name|Domain",
@@ -219,3 +219,5 @@ Now we have all the tables we need we can make the metacore object
 metacore(ds_spec, ds_vars, var_spec, value_spec,
                derivation, codelist)
 ```
+
+And we're good to go! 
