Update PNG casing

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# metacore <a href='https://github.com/atorus-research/metacore'><img src="man/figures/metacore.png" align="right" height="139"/></a>
+# metacore <a href='https://github.com/atorus-research/metacore'><img src="man/figures/metacore.PNG" align="right" height="139"/></a>
 
 <!-- badges: start -->
 
