--- a/README.Rmd
+++ b/README.Rmd
@@ -81,6 +81,8 @@ This table contains the information that bridges between purely dataset level an
 
 -   *core*: ADaM core, which should be one of the following values: "Expected", "Required", "Permissible", "Conditionally Required", "Conditionally Expected", or NA. For more information about core see [CDISC](https://www.cdisc.org/standards/foundational/adam)
 
+-   *supp_flag*: Logical to determine if the variable is in the supplementals
+
 ### var_spec <img src="man/figures/labeled-var_spec.png" align="right" height="150"/>
 
 This table contains the information the purely variable level information. The goal is there is a single row per variable, which is common across all datasets. This helps ensure variables follow the CDISC standard. But, this isn't always possible, so if information for a given variable differs across datasets, the variable will be recorded as dataset.variable in the variable column.
