--- a/README.Rmd
+++ b/README.Rmd
@@ -112,6 +112,8 @@ This table contains the information the information at the value level. There wi
 
 -   *origin*: Origin of the value
 
+-   *sig_dig*: Significant digits of the value
+
 -   *code_id*: ID for the code list to match the id in the **codelist** table
 
 -   *where*: Value of the variable
