--- a/README.Rmd
+++ b/README.Rmd
@@ -62,9 +62,9 @@ This table covers the basic information about each dataset. There is only a sing
 
 -   *dataset*: The abbreviated name of the dataset (e.g. AE)
 
--   *Structure*: Value structure of the dataset as a sting
+-   *structure*: Value structure of the dataset as a sting
 
--   *Label*: Dataset label
+-   *label*: Dataset label
 
 ### ds_vars <img src="man/figures/labeled-ds_vars.png" align="right" style="height:150px;"/>
 
@@ -86,7 +86,7 @@ This table contains the information that bridges between purely dataset level an
 
 ### var_spec <img src="man/figures/labeled-var_spec.png" align="right" style="height:150px;"/>
 
-This table contains the information the purely variable level information. The goal is there is a single row per variable, which is common across all datasets. This helps ensure variables follow the CDISC standard. But, this isn't always possible, so if information for a given variable differs across datasets, the variable will be recorded as dataset.variable in the variable column.
+This table contains the purely variable level information. The goal is there is a single row per variable, which is common across all datasets. This helps ensure variables follow the CDISC standard. But, this isn't always possible, so if information for a given variable differs across datasets, the variable will be recorded as dataset.variable in the variable column.
 
 -   *variable*: Variable name, which should match the name in **ds_spec**. Unless the variable needs to be duplicated, then the name will be a combination of the the dataset name and variable name from **ds_spec** (dataset.variable)
 
@@ -120,7 +120,7 @@ This table contains the information the information at the value level. There wi
 
 -   *derivation_id*: ID for the derivation to match with the **derivation** table
 
-### derivation <img src="man/figures/labeled-derivation.png" align="right" style="height:150px;"/>
+### derivations <img src="man/figures/labeled-derivation.png" align="right" style="height:150px;"/>
 
 This table has all the derivation information, with one row per derivation ID and the following information:
 
@@ -140,10 +140,7 @@ This table contains the code lists, permitted value lists, and external librarie
 
 -   *type*: An indicator of if the information in the code column is a code/decode table, permitted value, or external library
 
-To see a metacore object in about please see our vignettes
 
-
-![](man/figures/labeled_schema.png "man/figures/Metacore Schema")
 
 ### supp <img src="man/figures/labeled-supp.png" align="right" style="height:150px;"/>
 
@@ -157,7 +154,10 @@ This table contains the information needed to create supplemental tables. If you
 
 -   *qeval*: Evaluator for the supplemental variable
 
-To see a metacore object in about please see our vignettes
+To get more information about the metacore objects and how to build a specification reader, please see our vignettes.
+
+
+![](man/figures/labeled_schema.png "man/figures/Metacore Schema")
 
 ## Future Development
 
