--- a/README.Rmd
+++ b/README.Rmd
@@ -83,7 +83,7 @@ This table contains the information that bridges between purely dataset level an
 -   *keep*: Logical value about if the variable needs to be kept
 
 -   *core*: Core attribute indicating variable requirements. According to ADaM IG 1.3, valid values are "Required", "Conditionally Required", or "Permissible". 
-    For SDTM, values may include "Required", "Expected", or "Permissible" according to latest SDTM v3.4. The field can also be NA. For more information about core see [CDISC](https://www.cdisc.org/standards/foundational/adam)
+    For SDTM, values may include "Required", "Expected", or "Permissible" according to latest SDTM IG 3.4. The field can also be NA. For more information about core see [CDISC](https://www.cdisc.org/standards/foundational/adam)
 
 -   *supp_flag*: Logical to determine if the variable is in the supplemental datasets
 
