--- a/vignettes/Building_Specification_Readers.Rmd
+++ b/vignettes/Building_Specification_Readers.Rmd
@@ -256,7 +256,9 @@ Now we have all the tables we need we can make the metacore object
 
 ```{r}
 metacore(ds_spec, ds_vars, var_spec, value_spec,
-         derivation, codelist, verbose = "message")
+  derivation, codelist,
+  verbose = "message"
+)
 ```
 
 And we're good to go! 
